@@ -47,6 +47,7 @@
 #include "config.h"
 #endif
 
+#include <stdio.h>
 #define NEED_EVENTS
 #include <X11/X.h>
 #include <X11/Xproto.h>
@@ -65,7 +66,6 @@
 #include "xf86Xinput.h"
 #include "xf86_OSproc.h"
 #include "xf86OSmouse.h"
-#include "xf86_ansic.h"
 #include "compiler.h"
 
 #include "xisb.h"
@@ -80,8 +80,8 @@
  * Version constants
  */
 #define VMMOUSE_MAJOR_VERSION 12
-#define VMMOUSE_MINOR_VERSION 3
-#define VMMOUSE_PATCHLEVEL 2
+#define VMMOUSE_MINOR_VERSION 4
+#define VMMOUSE_PATCHLEVEL 0
 
 /*****************************************************************************
  *	static function header
