@@ -1,3 +1,10 @@
+2006-04-06  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/vmmouse.c:
+	* src/vmmouse_proto.h:
+	Unlibcwrap.  Bump server version requirement.  Bump to 12.4.0.
+
 2006-03-28  Philip Langdale  <plangdale@vmware.com>
 
 	* configure.ac:
